--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    <div class="container">
+    <div class="container col-lg-8">
       <h1>My To Do LIst</h1>
       <br>
       <p>Hover and click delete icon to delete the task</p>
